# miniature

./: .gitignore  LICENSE  README.md  main.nf  nextflow.config  nextflow_schema.json  paint_miniature-working.py  paint_miniature.py  pyproject.toml  test-workflow.yml
.github/workflows/: deploy-container.yml  test-workflow.yml
R/: paint_minaiture.R
data/: WD-76845-003_ROI01.ome.tif
docker/: Dockerfile  docker-compose.yml  paint_miniature.py  requirements.txt
nextflow/: main.nf  nextflow.config  nextflow_schema.json
notebooks/: miniature_demo.Rmd  miniature_demo.nb.html  umap.Rmd  umap.nb.html
py/: requirements.txt
python/: paint_miniature_gpu.ipynb  paint_miniature_s3.py
src/miniature/: __init__.py  __main__.py  cli.py  core.py  metrics.py  trustworthiness.py  ucie.py
tests/: test_core.py  test_ucie_benchmark.py
